[package]
edition = "2021"
name = "change-set"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frunk = "0.4.1"
frunk_core = "0.4.1"

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
parity-scale-codec = { default-features = false, features = [
  "derive",
], version = "3.0.0" }
scale-info = { default-features = false, version = "2.1.1", features = [
  "derive",
] }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",

]
