[package]
edition = "2021"
name    = "change-set"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Substrate
frame-support = { default-features = false, workspace = true }

sp-arithmetic = { default-features = false, workspace = true }
sp-core       = { default-features = false, workspace = true }
sp-runtime    = { default-features = false, workspace = true }
sp-std        = { default-features = false, workspace = true }

# crates.io
parity-scale-codec = { default-features = false, workspace = true, features = [
  "derive",
] }
scale-info = { default-features = false, workspace = true, features = [
  "derive",
] }
